
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="fill_vertical"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
           >

            <TextView
                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_txt1"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/etYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="false"
                    android:hint="@string/par_year_hint"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1" />

                <Spinner
                    android:id="@+id/spMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_txt2"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_txt3"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/etNdfl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/par_ndfl_hint" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_txt4"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edPfr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/par_pfr_hint" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_txt5"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edFfoms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/par_ffoms_hint" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/par_txt6"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/edFss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:enabled="false"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="5"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/par_fss_hint" />
            </TableRow>


        </TableLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_params"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_editorg" />

    </FrameLayout>

